items panier overflow fix

--- a/css/output.css
+++ b/css/output.css
@@ -3612,6 +3612,24 @@ body[dir="rtl"] .checkbox:checked,
   width: 310px;
 }
 
+.w-min {
+  width: -moz-min-content;
+  width: min-content;
+}
+
+.w-max {
+  width: -moz-max-content;
+  width: max-content;
+}
+
+.w-1\/2 {
+  width: 50%;
+}
+
+.w-1\/3 {
+  width: 33.333333%;
+}
+
 .min-w-\[40\%\] {
   min-width: 40%;
 }
@@ -3622,6 +3640,10 @@ body[dir="rtl"] .checkbox:checked,
 
 .min-w-\[310px\] {
   min-width: 310px;
+}
+
+.min-w-\[50\%\] {
+  min-width: 50%;
 }
 
 .max-w-md {
@@ -3638,6 +3660,10 @@ body[dir="rtl"] .checkbox:checked,
 
 .max-w-sm {
   max-width: 24rem;
+}
+
+.max-w-\[50\%\] {
+  max-width: 50%;
 }
 
 .flex-1 {
@@ -3758,6 +3784,10 @@ body[dir="rtl"] .checkbox:checked,
   gap: 1.5rem;
 }
 
+.gap-1 {
+  gap: 0.25rem;
+}
+
 .space-x-3 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-x-reverse: 0;
   margin-right: calc(0.75rem * var(--tw-space-x-reverse));
@@ -3782,6 +3812,10 @@ body[dir="rtl"] .checkbox:checked,
 
 .whitespace-nowrap {
   white-space: nowrap;
+}
+
+.whitespace-pre {
+  white-space: pre;
 }
 
 .rounded {
